--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -558,6 +558,40 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.container {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
 .absolute {
   position: absolute;
 }
@@ -845,4 +879,8 @@ video {
 .trends{
   background: url('https://pbs.twimg.com/media/FXAZ1b4XwAYwl9K?format=jpg&name=large');
   background-size: cover;
+}
+
+.category-list{
+  padding-left:unset !important;
 }
