--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -884,3 +884,8 @@ video {
 .category-list{
   padding-left:unset !important;
 }
+
+.site-main > * {
+  margin-top: unset !important;
+  margin-bottom: unset !important;
+}
